--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Extension</h1>
-        <button id="grb_butt" value="1">Grab</button>
+        <button id="grb_butt" value="1">Click VPN</button>
         <script src="app.js"></script>
     </body>
 </html>
